# satni-backend

./: .gitignore  README.md  all.json  article.json  articles.json  backend.readme.md  corpusoutput_lemmatiser_tester.py  generated.json  hasStem.json  init_backend.sh  lemmas.json  lemmatised.json  lemmatiser.py  pyproject.toml  satni.service.example  schema.graphql  sme-all-tags.txt  sme-tags.txt  test_lemmatiser.py
api/: schema.py
api/definitions/: dict.py  generator.py  lemma.py  lemmatiser.py  search_filter.py  term.py
backend/: pyproject.toml  requirements.txt  schema.py  settings.py  urls.py
cgi_port/: generator.py
dicts/: apps.py  models.py  schema.py
generator/: apps.py  generation_coverage.txt  generator.py  schema.py  test_generator.py  types.py
generator/data/: fin.json  sma.json  sme.json  smj.json  smn.json  sms.json
lemmas/: apps.py  models.py  schema.py  types.py
lemmatiser/: apps.py  corpusoutput_lemmatiser_tester.py  lemmatiser.py  moreanalysis.py  schema.py  test_lemmatiser.py  types.py  uff.py
main/: __init__.py  database.py  setup.py
main/generator/: generation_coverage.txt  generator.py  test_generator.py
main/generator/data/: sma.json  sme.json  smn.json
main/lemmatiser/: lemmatiser.py  test_lemmatiser.py  uff.py
scripts/: check_generator_coverage.py  check_invalids.py  example_filtering.py  from_dump.py  generate_paradigm_tags.py
stems/: apps.py  models.py  schema.py  types.py
terms/: apps.py  models.py  schema.py
