[tool.poetry]
name = "satni_backend"
version = "1.2.5"
description = "Backend for sátni.org"
authors = ["Børre Gaup <albbas@gmail.com>"]
license = "GPLv3+"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
lxml = "4.9.3"
termwikiimporter = {path = "../../langtech/tools/TermWikiImporter"}
strawberry-graphql = {extras = ["fastapi"], version = "^0.195.3"}
satni-back-python = {path = "../satni-back-rust/satni-back-python"}
uvicorn = {extras = ["standard"], version = "^0.23.1"}

[tool.poetry.dev-dependencies]
pylint = "2.6.0"
mccabe = "0.6.1"
isort = "5.6.4"
black = {version = "^21.7b0", allow-prereleases = true}
nose2 = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
