[tool.poetry]
name = "satni_backend"
version = "1.2.5"
description = "Backend for sátni.org"
authors = ["Børre Gaup <albbas@gmail.com>"]
license = "GPLv3+"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aniso8601 = "7.0.0"
asgiref = "3.2.10"
astroid = "2.4.2"
attrs = "21.2.0"
certifi = "2020.6.20"
chardet = "3.0.4"
Django = "3.0.8"
django-cors-headers = "3.4.0"
django-environ = "0.4.5"
django-extensions = "3.0.3"
django-filter = "2.0.0"
et_xmlfile = "1.0.1"
graphene = "2.1.8"
graphene-django = "2.12.1"
graphene-mongo = "0.2.13"
graphql-core = "2.3.2"
graphql-relay = "2.0.1"
idna = "2.10"
iso8601 = "0.1.12"
jdcal = "1.4.1"
lazy-object-proxy = "1.4.3"
lxml = "4.6.3"
mongoengine = "0.20.0"
mwclient = "0.10.1"
oauthlib = "3.1.0"
openpyxl = "3.0.7"
promise = "2.3"
pymongo = "3.10.1"
pytz = "2020.1"
PyYAML = "6.0.1"
requests = "2.25.1"
requests-oauthlib = "1.3.0"
rope = "0.18.0"
Rx = "1.6.1"
singledispatch = "3.4.0.3"
six = "1.15.0"
sqlparse = "0.3.1"
toml = "0.10.1"
Unidecode = "1.2.0"
urllib3 = "1.25.10"
wrapt = "1.12.1"
termwikitools = {git = "https://github.com/divvun/TermWikiTools"}
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pylint = "2.6.0"
mccabe = "0.6.1"
isort = "5.6.4"
black = {version = "^21.7b0", allow-prereleases = true}
nose2 = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
