[tool.poetry]
name = "satni_backend"
version = "1.2.2"
description = "Backend for sátni.org"
authors = ["Børre Gaup <albbas@gmail.com>"]
license = "GPLv3+"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
